# whisper-hub

./: .gitignore  README.md  pyproject.toml
whisperhub/: main.py
whisperhub/core/: config.py  events.py
whisperhub/db/: events.py
