[tool.poetry]
name = "whisper-hub"
version = "0.1.0"
description = "transcript and translate"
authors = ["Phate334 <phate334@gmail.com>"]
license = "Apache License 2.0"
readme = "README.md"
packages = [{include = "whisperhub"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.108.0"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
isort = "^5.12.0"
pylint = "^2.17.3"
pytest = "^7.3.1"
pytest-cov = "^4.1.0"
pytest-mock = "^3.11.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.black]
line-length = 100
target-version = ['py39']
include = '\.pyi?$'
exclude = '''
(
  /\.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 100

[tool.pylint.master]
load-plugins = "pylint.extensions.docparams"
ignore = ["build", "dist", ".venv"]
max-line-length = 100

[tool.pylint.messages_control]
disable = [
  "C0114", # missing-module-docstring
  "C0115", # missing-class-docstring
  "C0116", # missing-function-docstring
]
